[project]
name = "negtopos"
version = "0.1.0"
description = "Convert negative feedback issues into positive trajectory-filter conditions via an LLM."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
negtopos = "negtopos.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/negtopos"]

[tool.uv]
package = true
